--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@
   }
 
   body {
-    @apply bg-white text-gray-900 font-poppins;
+    @apply bg-white text-gray-900 font-sans;
   }
 
   pre, code {
